Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/staticImport/Shadow.out
Shadow.java:25:9: compiler.err.cant.apply.symbol: kindname.method, m1, int, compiler.misc.no.args, kindname.class, shadow.T2, (compiler.misc.arg.length.mismatch)
1 error
